# CudaRayTracer

./: .gitignore  CMakeLists.txt  build.bat  kernel.cu  main.cpp  main.cu  raytracer.h  readme.md
build-mac/: CMakeCache.txt
import/: bvh.cuh  raytracer.h  structs.h
import/glad/include/glad/: glad.h
import/glad/src/: glad.c
import/glfw-3.4/src/: input.c  monitor.c  window.c
